--- a/css/utilities.css
+++ b/css/utilities.css
@@ -1,7 +1,7 @@
 .container {
     max-width: 1100px;
     margin: 0 auto;
-    overflow: auto;
+    /* overflow: auto; */
     padding: 0 40px;
 }
 
@@ -19,9 +19,12 @@
 }
 
 .card-4 {
-    /* width: 33%; */
     height: 100%;
+    min-height: 400px;
     padding: 0;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
 }
 
 .btn {
@@ -57,6 +60,9 @@
 .flex-2 {
     display:flex;
     justify-content: space-evenly;
+    height: 100%;
+    align-items: flex-end;
+    padding-bottom: 10px;
 }
 
 .flex-3 {
@@ -88,8 +94,9 @@
 }
 
 .grid-4{
-    height: 75%;
-    width: 100%
+    height: 100%;
+    width: 100%;
+    gap: 40px;
 }
 
 /* Margin */
